templates/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
  name: n8n-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8sbys3bstn.com
      http:
        paths:
          - backend:
              service:
                name: n8n-service
                port:
                  name: http
            path: /n8n
            pathType: Prefix
